fix: overflow problem

--- a/todo_list/src/App.css
+++ b/todo_list/src/App.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-center;
-  gap: 309px;
+  gap: 16px;
   flex-shrink: 0;
   border-radius: 20px;
   background: var(--Background);
@@ -15,7 +15,7 @@
 
 .container {
   display: flex;
-  width: 456px;
+  width: 100%;
   flex-direction: column;
   align-items: flex-start;
   gap: 40px;
