--- a/todo_list/src/components/list/list.module.css
+++ b/todo_list/src/components/list/list.module.css
@@ -4,4 +4,5 @@
   align-items: flex-end;
   gap: 24px;
   align-self: stretch;
+  overflow: auto;
 }
